added logging and authority based http requests